--- a/_posts/2019-04-17-example.md
+++ b/_posts/2019-04-17-example.md
@@ -50,7 +50,7 @@ Below is a block quotation:
 
 # Images:
 ![GitHub Logo](https://github.githubassets.com/images/modules/logos_page/Octocat.png)
-(The bit between the square brackets becomes the "Alt Text", or the text that appears when you hover over an image. Notice how the image source [the bit in square brackets] can reference a folder in your project or any image on the internet.)
+(The bit between the square brackets becomes the "Alt Text", or the text that appears when you hover over an image. Notice how the image source [the bit in parentheses] can reference a folder in your project or any image on the internet.)
 
 # Links
 [GitHub](http://github.com) <- You put the text of the link in the square brackets, and the URL in parentheses.
